--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Mail::Address::MobileJp.
 
+0.03  Tue Jul 15 17:44:44 JST 2003
+	* Added *.vodafone.ne.jp
+
 0.02  Sun Dec 16 22:13:30 JST 2001
 	- Added *.i-get.ne.jp
 
