Import of MIYAGAWA/Mail-Address-MobileJp-0.06 from CPAN.
gitpan-cpan-distribution: Mail-Address-MobileJp
gitpan-cpan-version:      0.06
gitpan-cpan-path:         MIYAGAWA/Mail-Address-MobileJp-0.06.tar.gz
gitpan-cpan-author:       MIYAGAWA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Mail::Address::MobileJp.
 
+0.06  Tue Aug  1 13:14:51 JST 2006
+        * Added wm.pdx.ne.jp
+
 0.05  Fri Jul 21 00:36:02 JST 2006
         * Added is_softbank and softbank.ne.jp to is_mobile domain
 
