--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Mail::Address::MobileJp.
 
+0.07  Thu Sep  7 14:10:56 JST 2006
+        * Now is_softbank is an alias to is_vodafone. foo@softbank.ne.jp returns 1 on is_vodafone
+          (Thanks to Livedoor Mobile folks)
+
 0.06  Tue Aug  1 13:14:51 JST 2006
         * Added wm.pdx.ne.jp
 
