--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Mail::Address::MobileJp.
 
+0.08  Mon Jan 21 21:41:33 PST 2008
+        * Added @disney.ne.jp to is_softbank
+          http://japan.cnet.com/mobile/story/0,3800078151,20365410,00.htm
+
 0.07  Thu Sep  7 14:10:56 JST 2006
         * Now is_softbank is an alias to is_vodafone. foo@softbank.ne.jp returns 1 on is_vodafone
           (Thanks to Livedoor Mobile folks)
